# Cardiac-Arrest

./: COMPLETE_INTEGRATION_SUMMARY.md  COMPLETE_REGISTRATION_INTEGRATION.md  CORS_FIX_GUIDE.md  INTEGRATION_GUIDE.md  INTEGRATION_README.md  MULTIPARAMETER_INTEGRATION_GUIDE.md  start-multiparameter-backend.bat  start-multiparameter-backend.ps1  start-servers.bat  start-servers.ps1  test-cors-fix.html  test-integration.html  test-registration-integration.html
Arrythmia/: requirements.txt  train_model.py
Basic Backend/: .env.sample  setup-env.md  setup.md
Basic Backend/Arrythmia/: .gitignore  app.py  predict.py  prepare_data.py  qwen_heart.ipynb  requirements.txt  test_model.py
Basic Backend/ECG Image/: .gitignore  app.py  pyproject.toml  requirements.txt
Basic Backend/Multi_parameter/: client.py  main.py  patient_timeseries_dataset.csv  ts_feature_columns.joblib  ts_prediction_model.joblib  ts_prediction_scaler.joblib
Basic Backend/src/: app.js  constants.js
Basic Backend/src/controllers/: doctor.controller.js  user.controller.js
Basic Backend/src/db/: index.js
Basic Backend/src/middlewares/: auth.middleware.js
Basic Backend/src/models/: doctor.model.js  user.model.js
Basic Backend/src/routes/: doctor.routes.js  user.routes.js
ECG Image/: .gitignore  app.py  eeg-images-project.ipynb  pyproject.toml  requirements.txt
frontend/: README.md  index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: DashboardLayout.tsx  ProtectedRoute.tsx
frontend/src/components/dashboard/: AnalyticsSection.tsx  DashboardOverview.tsx  MultiparameterTest.tsx  PatientsSection.tsx  PredictionResults.tsx  UploadSection.tsx
frontend/src/lib/: api.ts  auth.ts  multiparameter-api.ts
frontend/src/pages/: Dashboard.tsx  Landing.tsx  Login.tsx  UserDashboard.tsx
