[tool.poetry]
name = "cardiac-arrest"
version = "0.1.0"
description = "ECG classification app with Flask and FastAPI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "2.13.0"
fastapi = "0.120.0"
flask = "2.3.3"
uvicorn = "0.38.0"
pillow = "11.0.0"
python-multipart = "0.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
