[tool.poetry]
name = "cardiac-arrest"
version = "0.1.0"
description = "ECG classification app with Flask"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"    # restrict to Python 3.11 for TensorFlow compatibility
tensorflow = "2.13.0"
flask = "2.3.3"
pillow = "11.0.0"
python-multipart = "0.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
